add locations and remove units transacted
